--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Case.Support Process</members>
-        <members>Lead.Comercial Lead Process</members>
-        <name>BusinessProcess</name>
+        <members>PME (Price List PME)</members>
+        <name>PriceList</name>
     </types>
     <version>51.0</version>
 </Package>
