--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Case.Support Process</members>
-        <members>Lead.Comercial Lead Process</members>
-        <name>BusinessProcess</name>
+        <members>Test_Community_C</members>
+        <name>ExperienceBundle</name>
+    </types>
+    <types>
+        <members>Test Community</members>
+        <name>Network</name>
+    </types>
+    <types>
+        <members>Test_Community_C</members>
+        <name>SiteDotCom</name>
     </types>
     <version>51.0</version>
 </Package>
