--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Add_Products</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>Remove_page_access</members>
-        <name>PermissionSet</name>
-    </types>
-    <types>
-        <members>Read Only</members>
-        <name>Profile</name>
+        <members>Dinner__c</members>
+        <name>CustomObject</name>
     </types>
     <version>51.0</version>
 </Package>
