--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>AR_Custom_Label</members>
+        <members>AR_Custom_Label_from_Dev3</members>
         <name>CustomLabel</name>
     </types>
     <types>
