--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Add_Products</members>
-        <name>ApexPage</name>
+        <members>Sales_Console</members>
+        <members>Test_App</members>
+        <name>CustomApplication</name>
     </types>
     <types>
-        <members>Remove_page_access</members>
-        <name>PermissionSet</name>
+        <members>AR_Custom_Label</members>
+        <name>CustomLabel</name>
     </types>
     <types>
-        <members>Read Only</members>
-        <name>Profile</name>
+        <members>es</members>
+        <name>Translations</name>
     </types>
     <version>51.0</version>
 </Package>
