--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Add_Products</members>
-        <name>ApexPage</name>
+        <members>XXX_Folder_email_classic/Different_Email</members>
+        <name>EmailTemplate</name>
     </types>
     <types>
-        <members>Remove_page_access</members>
-        <name>PermissionSet</name>
-    </types>
-    <types>
-        <members>Read Only</members>
-        <name>Profile</name>
+        <members>XXX_Folder_email_classic/XXX_email_classic_new</members>
+        <name>EmailTemplate</name>
     </types>
     <version>51.0</version>
 </Package>
