--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Add_Products</members>
-        <name>ApexPage</name>
+        <members>Custom_Perm</members>
+        <members>Custom_Perm2</members>
+        <members>customPermissions</members>
+        <members>custom_perm_3</members>
+        <members>custom_perm_4</members>
+        <members>custom_perm_5</members>
+        <name>CustomPermission</name>
     </types>
     <types>
-        <members>Remove_page_access</members>
+        <members>TTT_Custom_Permission_Test</members>
         <name>PermissionSet</name>
     </types>
     <types>
-        <members>Read Only</members>
+        <members>TTT Custom Permission Test</members>
         <name>Profile</name>
     </types>
     <version>51.0</version>
