--- a/package.xml
+++ b/package.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Custom_Perm</members>
-        <members>Custom_Perm2</members>
-        <members>customPermissions</members>
-        <members>custom_perm_3</members>
-        <members>custom_perm_4</members>
-        <members>custom_perm_5</members>
-        <name>CustomPermission</name>
+        <members>Translation_Custom_Label</members>
+        <name>CustomLabel</name>
     </types>
     <types>
-        <members>TTT_Custom_Permission_Test</members>
-        <name>PermissionSet</name>
-    </types>
-    <types>
-        <members>TTT Custom Permission Test</members>
-        <name>Profile</name>
+        <members>fr</members>
+        <name>Translations</name>
     </types>
     <version>51.0</version>
 </Package>
