US-0012846: profiles commit

--- a/package.xml
+++ b/package.xml
@@ -7,9 +7,16 @@
         <members>Admin CLONE</members>
         <members>Admin CLONE 2</members>
         <members>CAI Admin</members>
+        <members>Commit Profile Test</members>
+        <members>Commit Profile Test 2</members>
+        <members>Commit Profile Test 3</members>
         <members>F5Test</members>
         <members>Matias test</members>
+        <members>No Class Access</members>
         <members>Not in Master</members>
+        <members>RO CLONE</members>
+        <members>RO Clone Profile</members>
+        <members>RO Full Profile Test</members>
         <members>Read Only</members>
         <members>Read Only Clone</members>
         <members>Read Only Clone 2</members>
@@ -17,6 +24,10 @@
         <members>Standard</members>
         <members>Standard User</members>
         <members>Standard User CLONE</members>
+        <members>Test Rohit</members>
+        <members>Test admin</members>
+        <members>TestKaiser</members>
+        <members>Thomson Test</members>
         <name>Profile</name>
     </types>
     <version>52.0</version>
