--- a/package.xml
+++ b/package.xml
@@ -2,8 +2,8 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>Matias test</members>
+        <name>Profile</name>
     </types>
     <version>52.0</version>
 </Package>
