--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>Lead.Name</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Lead.Technical_Contact</members>
+        <name>RecordType</name>
+    </types>
+    <types>
+        <members>Salutation</members>
+        <members>Salutation</members>
+        <name>StandardValueSet</name>
     </types>
     <version>52.0</version>
 </Package>
