--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>ARPartner1</members>
-        <members>AR_Services_Test1</members>
-        <members>NGService1</members>
-        <members>Tabs1</members>
-        <members>Test_Community_C</members>
-        <members>Test_Community_Experience1</members>
-        <name>ExperienceBundle</name>
+        <members>AppleWatch</members>
+        <name>ApexClass</name>
     </types>
     <version>52.0</version>
 </Package>
