--- a/experiences/ARPartner1/config/loginAppPage.json
+++ b/experiences/ARPartner1/config/loginAppPage.json
@@ -2,6 +2,6 @@
   "cmsSettings" : { },
   "id" : "626fc4af-e852-4bdc-b10e-77b97f1314d9",
   "label" : "login",
-  "templateName" : "Login Template",
+  "templateName" : "Login Template MOD",
   "type" : "appPage"
 }
