--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>Case.CO2__c</members>
+        <members>Case.FLS_fails__c</members>
+        <members>Case.Test_conflict__c</members>
+        <members>Case.Unique_Code__c</members>
+        <members>Case.Zip_file_test__c</members>
+        <name>CustomField</name>
     </types>
     <version>52.0</version>
 </Package>
