--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>US_CS_Test__c.Field_2__c</members>
+        <members>US_CS_Test__c.Field_3__c</members>
+        <members>US_CS_Test__c.Filed_1__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>US_CS_Test__c</members>
+        <name>CustomObject</name>
     </types>
     <version>52.0</version>
 </Package>
