--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>Case.Do_not_move_to_UAT__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Admin CLONE 5</members>
+        <name>Profile</name>
     </types>
     <version>52.0</version>
 </Package>
