--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>AR Dependency Definition</members>
+        <name>OrchestrationDependencyDefinition</name>
+    </types>
+    <types>
+        <members>AR Orchestration Item Definition (AR Orchestration Item Definition_Resolve Orchestration Fallouts)</members>
+        <members>Resolve Fallout (Resolve Fallout_Resolve Orchestration Fallouts)</members>
+        <name>OrchestrationItemDefinition</name>
     </types>
     <version>52.0</version>
 </Package>
