--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>ORCI Blue Planet Integration_ORCI / Blue Planet Orch Plan (ORCI Blue Planet Integration_ORCI   Blue Planet Orch Plan_AR Orchestration Plan Definition)</members>
+        <name>OrchestrationItemDefinition</name>
+    </types>
+    <types>
+        <members>ORCI / Blue Planet Orch Plan (ORCI   Blue Planet Orch Plan)</members>
+        <name>OrchestrationPlanDefinition</name>
     </types>
     <version>52.0</version>
 </Package>
