--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>Default Retry Policy for AutoTasks (e70f3f84-1aa1-4f50-9975-9dd54563687c)</members>
+        <name>IntegrationRetryPolicy</name>
     </types>
     <version>52.0</version>
 </Package>
