--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>Test_Bug__mdt</members>
+        <members>copado__Copado_Setting__mdt</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Test_Bug</members>
+        <members>copado__Edit_Git_Promotion_Step</members>
+        <name>CustomPermission</name>
+    </types>
+    <types>
+        <members>Test Bug</members>
+        <name>Profile</name>
     </types>
     <version>52.0</version>
 </Package>
