--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>F5Test</members>
-        <members>F5Test/TestP2</members>
-        <name>Report</name>
+        <members>Test Bug</members>
+        <name>Profile</name>
     </types>
     <version>52.0</version>
 </Package>
