--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Image</members>
-        <name>StaticResource</name>
+        <members>Account.GuestSharingTest</members>
+        <name>SharingGuestRule</name>
     </types>
     <version>52.0</version>
 </Package>
