--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AppleWatch</members>
-        <name>ApexClass</name>
+        <members>Account.AR_Acc_Sharing_Criteria</members>
+        <members>Account.Sharing_Acc_AR</members>
+        <name>SharingCriteriaRule</name>
     </types>
     <version>52.0</version>
 </Package>
