--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Case.Update_Origin</members>
-        <name>WorkflowFieldUpdate</name>
-    </types>
-    <types>
-        <members>Case.Update origin</members>
-        <name>WorkflowRule</name>
+        <members>AppleWatch</members>
+        <members>AppleWatchTest</members>
+        <name>ApexClass</name>
     </types>
     <version>52.0</version>
 </Package>
