--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>AWS_Repo</members>
         <members>AccountOperations</members>
         <members>AppleWatch</members>
         <members>AppleWatchTest</members>
