US-0012956: Nested Selected + Late Retrieve

--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AppleWatch</members>
-        <name>ApexClass</name>
+        <members>Dinner__c.LateDinner__c</members>
+        <members>Dinner__c.Nested_Field_Test__c</members>
+        <name>CustomField</name>
     </types>
     <version>53.0</version>
 </Package>
