US-0012957: Late Retrieve + Class

--- a/package.xml
+++ b/package.xml
@@ -4,5 +4,9 @@
         <members>AppleWatch</members>
         <name>ApexClass</name>
     </types>
+    <types>
+        <members>Dinner__c.LateDinner__c</members>
+        <name>CustomField</name>
+    </types>
     <version>53.0</version>
 </Package>
