--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AppleWatch</members>
-        <name>ApexClass</name>
+        <members>Dinner__c.CurrencyIsoCode</members>
+        <members>Dinner__c.Dinner_Type__c</members>
+        <members>Dinner__c.External_Auto__c</members>
+        <members>Dinner__c.FLS_Test_Dinner_PS__c</members>
+        <members>Dinner__c.Nested_Field_Test__c</members>
+        <members>Dinner__c.Picklist_Dinner_Table__c</members>
+        <members>Dinner__c.Picklist_Dinner__c</members>
+        <members>Dinner__c.Point_of_contact__c</members>
+        <members>Dinner__c.TEST_US__c</members>
+        <members>Dinner__c.Table__c</members>
+        <members>Dinner__c.Test_Conflict_Resolution__c</members>
+        <members>Dinner__c.Type__c</members>
+        <members>Dinner__c.VS_Field1_Test_2__c</members>
+        <members>Dinner__c.VS_Field2_Test_2__c</members>
+        <members>Dinner__c.VS_Field3_Test_2__c</members>
+        <members>Dinner__c.VS_Field4_Test_2__c</members>
+        <members>Dinner__c.VS_PS_Test_D__c</members>
+        <members>Dinner__c.historyRetentionPolicy__c</members>
+        <name>CustomField</name>
     </types>
     <version>53.0</version>
 </Package>
