--- a/package.xml
+++ b/package.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account.CustomerPriority__c</members>
-        <members>Account.Global_Picklist__c</members>
-        <members>Account.PA_Test_Field__c</members>
-        <members>Account.Test_Commit_PA__c</members>
-        <members>Case.SLAViolation__c</members>
-        <members>Contact.Languages__c</members>
-        <members>Contact.Level__c</members>
+        <members>Case.Field_US_1__c</members>
+        <members>Case.Field_US_3__c</members>
+        <members>Case.Field_US_4__c</members>
         <name>CustomField</name>
-    </types>
-    <types>
-        <members>PersonAccount.PersonAccount</members>
-        <name>RecordType</name>
     </types>
     <version>53.0</version>
 </Package>
