--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>ARPartner1</members>
-        <members>AR_Services_Test1</members>
-        <members>NGService1</members>
-        <members>Tabs1</members>
-        <members>Test_Community_C</members>
-        <members>Test_Community_Experience1</members>
-        <name>ExperienceBundle</name>
+        <members>Territory_Model_1.TM1_Rule_1</members>
+        <members>Territory_Model_2.TM_2_Rule_1</members>
+        <name>Territory2Rule</name>
     </types>
     <version>53.0</version>
 </Package>
