--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Button_AAA</members>
-        <name>LiveChatButton</name>
+        <members>ARPartner1</members>
+        <members>AR_Services_Test1</members>
+        <members>NGService1</members>
+        <members>SCATest1</members>
+        <members>Tabs1</members>
+        <members>Test_Community_C</members>
+        <members>Test_Community_Experience1</members>
+        <name>ExperienceBundle</name>
     </types>
     <version>53.0</version>
 </Package>
