--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Test_Dashboard_Deployment_Folder</members>
-        <members>Test_Dashboard_Deployment_Folder/Test_Dahsboard_Deployment</members>
-        <name>Dashboard</name>
+        <members>AppleWatch</members>
+        <name>ApexClass</name>
     </types>
-    <version>42.0</version>
+    <version>53.0</version>
 </Package>
