--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Case.H1__c</members>
+        <members>aac__c.aac__c</members>
         <name>CustomField</name>
     </types>
-    <version>54.0</version>
+    <version>55.0</version>
 </Package>
