--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>ARPartner1</members>
-        <members>AR_Services_Test1</members>
-        <members>NGService1</members>
-        <members>SCATest1</members>
-        <members>Tabs1</members>
-        <members>Test_Community_C</members>
-        <members>Test_Community_Experience1</members>
-        <name>ExperienceBundle</name>
+        <members>C4s_App_oauth_c4sCanvas</members>
+        <members>Connected_App_YAML_oauth_c4sCanvas</members>
+        <members>Test_Connected_App_oauth_c4sCanvas</members>
+        <name>CanvasMetadata</name>
     </types>
     <version>57.0</version>
 </Package>
