--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Case.H1__c</members>
-        <name>CustomField</name>
+        <members>AppleWatch</members>
+        <members>AppleWatchTest</members>
+        <members>spm_myType101</members>
+        <name>ApexClass</name>
     </types>
-    <version>54.0</version>
+    <version>57.0</version>
 </Package>
