US-11083696: test unified rollback fix

--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AppleWatch</members>
-        <members>AppleWatchTest</members>
-        <members>spm_myType101</members>
-        <name>ApexClass</name>
+        <members>Case.ABC__c</members>
+        <members>Case.BitCoin__c</members>
+        <name>CustomField</name>
     </types>
     <version>57.0</version>
 </Package>
