--- a/notificationTypeConfig/NotificationTypeConfig.config
+++ b/notificationTypeConfig/NotificationTypeConfig.config
@@ -2,6 +2,13 @@
 <NotificationTypeConfig xmlns="http://soap.sforce.com/2006/04/metadata">
     <notificationTypeSettings>
         <notificationChannels>
+            <desktopEnabled>true</desktopEnabled>
+            <mobileEnabled>false</mobileEnabled>
+        </notificationChannels>
+        <notificationType>actionablelist_async_save</notificationType>
+    </notificationTypeSettings>
+    <notificationTypeSettings>
+        <notificationChannels>
             <desktopEnabled>false</desktopEnabled>
             <mobileEnabled>false</mobileEnabled>
         </notificationChannels>
@@ -13,6 +20,13 @@
             <mobileEnabled>true</mobileEnabled>
         </notificationChannels>
         <notificationType>approval_request</notificationType>
+    </notificationTypeSettings>
+    <notificationTypeSettings>
+        <notificationChannels>
+            <desktopEnabled>true</desktopEnabled>
+            <mobileEnabled>false</mobileEnabled>
+        </notificationChannels>
+        <notificationType>cc_export_success</notificationType>
     </notificationTypeSettings>
     <notificationTypeSettings>
         <notificationChannels>
